[package]
name = "firebase-rs"
edition = "2021"
version = "2.0.6"
description = "Rust based Firebase library"
readme = "README.md"
repository = "https://github.com/emreyalvac/firebase-rs"
documentation = "https://docs.rs/firebase-rs/2.0.6/firebase_rs/"
license = "MIT"
authors = ["Emre YALVAÇ <emre.yalvac@outlook.com>"]
exclude = ["examples/*", "tests/*"]
keywords = ["firebase", "rest", "api", "web", "database"]

[dependencies]
url = "2.2.2"
serde_json = "1.0.82"
serde = { version = "1.0.139", features = ["derive"] }
itertools = "0.10.5"
http = "0.2"

reqwest = { version = "0.11.11", optional = true, features = ["json"] }
http_req_wasi = { git = "https://github.com/jetjinser/http_req", optional = true, features = ["wasmedge_ssl"] }
async-trait = "0.1.64"
unicase = "2.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.20.0", default-features = false, features = ["rt", "macros", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_wasi = { version = "1.20.0", default-features = false, features = ["rt", "macros", "sync"] }

[features]
default = ["reqwest"]

wasmedge = ["http_req_wasi"]
